--- a/styles/_cards.scss
+++ b/styles/_cards.scss
@@ -43,7 +43,6 @@ $hover-background: rgba(0,0,0,0.25);
 
   .card-content {
     height: 150px;
-    max-height: 150px;
 
     .add-fav-wrapper {
 
@@ -58,6 +57,10 @@ $hover-background: rgba(0,0,0,0.25);
   }
 }
 
+.card-content {
+  max-height: 100%;
+  overflow: scroll;
+}
 
 // #heart1{
 //     margin-left: 20px;
